// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatusItem renders custom aria labels 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-label="progressAriaLabel"
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="buttonAriaLabel"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rf:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item test"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom file name/size/icon/progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom function progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message 0
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom progress value/variant when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 42%.
      </div>
      <div
        class="pf-v6-c-progress pf-m-warning"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            42%
          </span>
          <span
            class="pf-v6-c-progress__status-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="42"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 42%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rd:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders expected values from a passed file object 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders with expected class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem rendersdefault progressAriaLiveMessage when nothing is passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0  "
            width="1em"
          >
            <path />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
